--- a/app/views/blazer/uploads/index.html.erb
+++ b/app/views/blazer/uploads/index.html.erb
@@ -45,11 +45,11 @@
   </tbody>
 </table>
 
-<script>
+<%= javascript_tag nonce: true do %>
   $("#search").on("keyup", function() {
     var value = $(this).val().toLowerCase()
     $("#uploads tbody tr").filter( function() {
       $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
     })
   }).focus()
-</script>
+<% end %>
