--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -12,12 +12,12 @@
     <div class="hide">
       <%= f.select :query_id, [], {include_blank: true} %>
     </div>
-    <script>
+    <%= javascript_tag nonce: true do %>
       <%= blazer_js_var "queries", Blazer::Query.active.named.order(:name).select("id, name").map { |q| {text: q.name, value: q.id} } %>
       <%= blazer_js_var "items", [@check.query_id].compact %>
 
       $("#check_query_id").selectize({options: queries, items: items, highlight: false, maxOptions: 100}).parents(".hide").removeClass("hide");
-    </script>
+    <% end %>
   </div>
 
   <% if @check.respond_to?(:check_type) %>
@@ -28,9 +28,9 @@
         <% check_options << ["Anomaly (most recent data point)", "anomaly"] if Blazer.anomaly_checks %>
         <%= f.select :check_type, check_options %>
       </div>
-      <script>
+      <%= javascript_tag nonce: true do %>
         $("#check_check_type").selectize({}).parent().removeClass("hide");
-      </script>
+      <% end %>
     </div>
   <% elsif @check.respond_to?(:invert) %>
     <div class="form-group">
@@ -38,9 +38,9 @@
       <div class="hide">
         <%= f.select :invert, [["Any results (bad data)", false], ["No results (missing data)", true]] %>
       </div>
-      <script>
+      <%= javascript_tag nonce: true do %>
         $("#check_invert").selectize({}).parent().removeClass("hide");
-      </script>
+      <% end %>
     </div>
   <% end %>
 
@@ -50,9 +50,9 @@
       <div class="hide">
         <%= f.select :schedule, Blazer.check_schedules.map { |v| [v, v] } %>
       </div>
-      <script>
+      <%= javascript_tag nonce: true do %>
         $("#check_schedule").selectize({}).parent().removeClass("hide");
-      </script>
+      <% end %>
     </div>
   <% end %>
 
