--- a/lib/generators/blazer/templates/install.rb.tt
+++ b/lib/generators/blazer/templates/install.rb.tt
@@ -39,6 +39,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.text :emails
       t.text :slack_channels
       t.string :check_type
+      t.string :last_results_hash
       t.text :message
       t.datetime :last_run_at
       t.timestamps null: false
