Removed yet [skip ci]

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -4,7 +4,7 @@
   <% if @only_chart %>
     <p class="text-muted">Select variables</p>
   <% else %>
-    <div class="alert alert-info">Can’t preview queries with variables...yet!</div>
+    <div class="alert alert-info">Can’t preview queries with variables</div>
   <% end %>
 <% elsif @cohort_analysis %>
   <% if @cohort_error %>
