add Option to deliver every report

--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -24,7 +24,7 @@
     <div class="form-group">
       <%= f.label :check_type, "Alert if" %>
       <div class="hide">
-        <% check_options = [["Any results (bad data)", "bad_data"], ["No results (missing data)", "missing_data"]] %>
+        <% check_options = [["Any results (bad data)", "bad_data"], ["No results (missing data)", "missing_data"], ["Always", "always"]] %>
         <% check_options << ["Anomaly (most recent data point)", "anomaly"] if Blazer.anomaly_checks %>
         <%= f.select :check_type, check_options %>
       </div>
